Replace class loader with input stream